--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/cli": "^4.0.17",
+    "@vercel/speed-insights": "^1.2.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.6.2",
     "next": "15.2.4",
