--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-jvectormap/core": "^1.0.4",
+    "@react-jvectormap/world": "^1.1.2",
     "@tailwindcss/cli": "^4.0.17",
     "@vercel/speed-insights": "^1.2.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.6.2",
     "next": "15.2.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
